v1.6.0: restructure troubleshooting + fold StackOverflow/GitHub findings
Group the troubleshooting table into labelled clusters (7-A JDK-removed APIs, 7-B ASM/bytecode walls, 7-C Gradle, 7-D Spring Boot, 7-E semantic/environmental) behind a single class-file-version anchor; add a how-to-read header. New/sharpened rows: Jadira fix is 7.0.0.CR1 (JEP-223); Groovy as an ASM consumer; SB 2.7.17 floor and on SB>=3.2 the v65 culprit is a transitive ASM dep not Spring Boot; remove stale --add-modules java.xml.bind/java.se.ee on 8->11; --add-opens vs --add-exports + JEP 403; Mockito experimental flag + self-attaching-agent warning; sun.misc.Unsafe JEP 471/498 + flag; Lombok Could-not-initialize-lombok.javac.Javac; prefer spring-boot-starter-validation.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>